# cpp-template

./: .gitignore  CMakeLists.txt
cmake/: Benchmark.cmake  ClangTidy.cmake  CppCheck.cmake  ExportCompileCommands.cmake  FindASan.cmake  FindSanitizers.cmake  FindUBSan.cmake  Install.cmake  SetReleaseAsDefault.cmake  Testing.cmake  sanitize-helpers.cmake
src/: CMakeLists.txt
src/calc/: CMakeLists.txt  calc.cpp
src/calc_benchmark/: CMakeLists.txt
test/: CMakeLists.txt
test/san/: CMakeLists.txt  san_test.cpp
